<resources>
    <string name="app_name">Shoe Store</string>

    <!--Field labels-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="shoe_name_label">Shoe name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe size</string>
    <string name="description">Description</string>

    <!--Nav destination headers-->
    <string name="log_in">Log in</string>
    <string name="welcome">Welcome</string>
    <string name="user_guide">User guide</string>
    <string name="shoe_list">Shoe list</string>
    <string name="add_new_shoe">Add new shoe</string>

    <!--Menu item text-->
    <string name="logout">Logout</string>

    <!--Onscreen text-->
    <string name="success">Successfully logged in!</string>
    <string name="placeholder">Click the \'+\' button to start adding shoes</string>
    <string name="shoe_inventory_tracker">Welcome to Shoe Tracker</string>
    <string name="user_guide_header">Shoe Store User Guide</string>
    <string name="shoe_entry_header">Enter shoe details</string>
    <string name="continue_text">Press the button below to continue.</string>
    <string name="instruction_text_1">This app is designed for holding inventory information for a shoe store.</string>
    <string name="instruction_text_2">Shoes will be displayed in a list on the Shoe List screen.</string>
    <string name="instruction_text_3">To add a new shoe to the list, click the \'+\' button where you will be taken to the \'Add a new shoe\' screen.</string>
    <string name="instruction_text_4">Enter the new shoe details and press \'Save\' to add the shoe to the list, or \'Cancel\' to return to Screen List without saving.</string>
    <string name="instruction_text_5">Pressing back or \'Logout\' on the Shoe List screen will take you back to the Log in page.</string>

    <!--Buttons-->
    <string name="next">Next</string>
    <string name="continue_btn">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="create">Create account</string>
    <string name="enter">Enter</string>

    <!--Hints for shoe entry-->
    <string name="shoe_name_hint">Enter the name of the shoe</string>
    <string name="company_hint">Enter the shoe manufacturer</string>
    <string name="description_hint">Enter a description for this shoe</string>

    <!--Toast message-->
    <string name="shoe_details_missing">Enter all details before saving</string>

</resources>
