<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.InstructionFragment">

    <!-- A LinearLayout was used because this screen is a simple list of TextViews with a button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/instruction_text"
            style="@style/screenHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_guide_header" />

        <TextView
            style="@style/instructionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_text_1" />

        <TextView
            style="@style/instructionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_text_2" />

        <TextView
            style="@style/instructionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_text_3" />

        <TextView
            style="@style/instructionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_text_4" />

        <TextView
            style="@style/instructionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_text_5" />

        <Button
            android:id="@+id/next_button"
            style="@style/buttonStyle"
            android:layout_marginTop="8dp"
            android:text="@string/enter" />

    </LinearLayout>
</layout>

