<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.ShoeDetailFragment">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/shoe_entry_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:text="@string/shoe_entry_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_name_label"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:text="@string/shoe_name_label"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/shoe_name_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_entry_title_text" />

        <EditText
            android:id="@+id/shoe_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:hint="@string/shoe_name_hint"
            android:text="@={shoe.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/shoe_name_label"
            app:layout_constraintTop_toBottomOf="@id/shoe_entry_title_text" />


        <TextView
            android:id="@+id/company_label"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:text="@string/company"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/company_edit_text"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/company_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/raleway"
            android:hint="@string/company_hint"
            android:inputType="textPersonName"
            android:text="@={shoe.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/company_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_edit_text" />

        <TextView
            android:id="@+id/shoe_size_label"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:text="@string/shoe_size"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_size_edit_text"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoe_size_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:ems="10"
            android:fontFamily="@font/raleway"
            android:inputType="numberDecimal"
            android:text="@={`` + shoe.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoe_size_label"
            app:layout_constraintTop_toBottomOf="@+id/company_edit_text" />

        <TextView
            android:id="@+id/description_label"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:text="@string/description"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/description_edit_text"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/raleway"
            android:hint="@string/description_hint"
            android:inputType="textPersonName"
            android:text="@={shoe.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/description_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_edit_text" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/buttonStyle"
            android:layout_marginTop="16dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_edit_text" />

        <Button
            android:id="@+id/save_button"
            style="@style/buttonStyle"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cancel_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

